alignment fix for close icon in popup

--- a/src/components/features/comments/comments.css
+++ b/src/components/features/comments/comments.css
@@ -24,7 +24,7 @@
 
 .close-popup {
     position: fixed;
-    right: 0.5vw;
+    right: 0;
     cursor: pointer;
 }
 
